[package]
name = "rumodoro"
version = "0.1.0"
edition = "2021"
description = "Simple pomodoro clock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.1.12", features = ["derive"]}
color-eyre = "0.6.1"
druid = { git = "https://github.com/linebender/druid.git" }
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
#tui = "0.18.0"
#crossterm = "0.23.2"
